# Data-Structure-And_Algos

./: .gitignore  CMakeLists.txt  main.c  readme.md  run.sh
bst/: avl.c  bst.c
graph/: bfs.c  dfs.c  dijkstra.c  graph.c  graph_adj.c  graph_matrix.c
hashmap/: HashMap.cpp  hashMap_inplace.cpp
include/: HashMap.h  arrayList.h  arrayQueue.h  avl.h  bfs.h  binary_search.h  bogo_search.h  bogo_sort.h  bst.h  bubbleSort.h  dfs.h  dijkstra.h  doublyLinkedList.h  graph.h  graph_adj.h  graph_matrix.h  insertionSort.h  linear_search.h  linkedList.h  linkedQueue.h  merge_sort.h  quicksort.h  selectionSort.h  utils.h
lists/: arrayList.c  doublyLinkedList.c  linkedList.c
queue/: LinkedQueue.c  arrayQueue.c  linkedQueue.c
search/: binary_search.c  bogo_search.c  linear_search.c
sorting/: bogo_sort.c  bubbleSort.c  insertionSort.c  quicksort.c  readme.md  selectionSort.c
stack/: arrayStack.c  linkedStack.c
utils/: array.c  number.c
